# cpts224

./: INSTALL  Makefile  Makefile.am  Makefile.in  TODO  cma.c  config.status  configure  configure.ac  debug.h  libtool  makefile
.pc/: applied-patches
.pc/debian-changes-224-1/: INSTALL
.pc/debian-changes-224-1/src/: Makefile.am
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
debian/: README.Debian  README.source  changelog  control  copyright  cpts.cron.d.ex  cpts.default.ex  cpts.doc-base.EX  cpts.substvars  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/cpts/DEBIAN/: control  md5sums  shlibs
debian/cpts/usr/lib/: libcma.la  libcma.so.0.0.0
debian/patches/: debian-changes-224-1
src/: Makefile  Makefile.am  Makefile.in  blocksize.c  cma.c  ma.c
